@@ -4,7 +4,8 @@
       src/dialogs/desktop-properties.cpp:
 
 	  Added data entry widgets for document metadata, including a rough
-	  license selector, and debug rdf generator.
+	  license selector, and debug rdf generator.  Corrected whitespace,
+	  added table for RDF entity lookup, tag, and title mapping.
 
 2004-06-25  Carl Hetherington  <inkscape@carlh.net>
 
